# synreal-mujoco

./: .gitignore  LICENSE  README.md  env_config.md  pyproject.toml  simulation_login_template.json
assets/mujoco_model/: dual_piper_with_cloth.xml  dual_piper_with_cloth_simple.xml  test_blue_dress.xml  test_cloth_bag.xml  test_green_tshirt.xml
assets/mujoco_model/piper_meshes/: base_link_convex.STL  base_link_convex_1.STL  gripper_base_convex.STL  (+9 more)
assets/piper_description/: piper_with_gripper.urdf
common/: csv_data_utils.py  robot_utils.py
mujoco_style3d/: __init__.py  _mj_data_helper.py  cloth_property.py  example.py  example_async.py  helper.py  mj_to_sim.py  piece_property.py  s3d_mj.py  s3d_mjx.py  smj.py  step_skipper.py  test_reset.py
mujoco_style3d/examples/: collide_cloth.py  example.py  example_async.py  mj_py_cloth.py  mj_py_cloth_skip_steps.py  mjx_batch_run.py  mjx_brax_train.py  mjx_brax_train_with_cloth.py  push_cloth_on_table.py
scripts/: csv_play_in_mujoco.py  mjx_batch_run_cloth.py  mjx_benchmark.py  mujoco_basic_demo.py  ros_publish_test.py  ros_remote_control.py  ros_remote_control_cloth.py  ros_remote_control_roslibpy.py  ros_remote_control_slow.py  simple_rl_test.py
synreal_mujoco/: _deformable_data_helper.py  _mj_data_helper.py  cloth_property.py  data_classes.py  s3d_mj.py  s3d_scene.py  s3d_scene_stepper.py  smj.py  utility.py
synreal_mujoco/examples/: deformable_body.py  mj_py_cloth.py  mj_py_cloth_skip_steps.py  mj_py_deformable_body.py  mjx_batch_run.py  mjx_brax_train_with_cloth.py  piper_cloth.py  push_cloth_on_table.py
(+15 files in other folders)
